# aura-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: launch-minecraft.mjs
src/: App.tsx  coreBridge.ts  mockData.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
